tests/ui_unstable/nul_chars_include_wchz.rs
use wchar::{include_wchz, wchar_t};

const NUL_CHARS: &[wchar_t] = include_wchz!("../data/nul_chars.txt");

fn main() {}
